<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/weather_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/weather_image_view"
        android:textSize="22sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_text_view"
        android:layout_toEndOf="@id/weather_image_view"
        android:paddingTop="10dp">

        <TableRow>

            <TextView
                android:text="@string/feels_like_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/feels_like_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/night_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/night_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:textSize="18sp">

            <TextView
                android:text="@string/wind_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wind_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/pressure_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pressure_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/humidity_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidity_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>


        <TableRow>

            <TextView
                android:text="@string/cloudiness_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cloudiness_text_view"
                android:gravity="end"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</RelativeLayout>